# ios-screen-recorder

./: .dockerignore  .gitignore  Dockerfile  Dockerrun.aws.json  Procfile  README.md  build.sh  docker-compose.local.yml  pyproject.toml  recordings.db  requirements.txt
.ebextensions/: 000_deploy.config  001_envar.config
features/: screen_recording.feature
features/steps/: recording_steps.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  RecordingCard.tsx  index.ts
src/api/: dependencies.py  main.py  models.py  routes.py
src/config/: capabilities.py
src/core/: driver.py
src/database/: __init__.py  connection.py  crud.py  models.py
src/ios_screen_recorder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/simulation/: mock_driver.py
src/utils/: file_utils.py  logger.py  time_utils.py
tests/: test_screen_recording.py
